# wp-codex-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  poetry-scripts.py  poetry_scripts.py  pyproject.toml  scripts.py  test_logging.py
.cursor/rules/: pull-request-titles.mdc
.github/: pull_request_template.md
app/: container.py  server.py
app/auth/application/service/: jwt.py
app/rag/adapter/input/api/: __init__.py
app/rag/adapter/input/api/v1/: rag.py
app/rag/application/dto/: __init__.py  llm_completion_response.py  rag_response.py  wordpress_api_contracts.py
app/rag/application/handler/: llm_only_handler.py  rag_handler.py
app/rag/application/service/: huggingface_client.py  llm_service.py  llm_service_factory.py  openai_client.py  prompt_service.py  rag.py
app/rag/application/service/clients/: __init__.py  groq_client.py  huggingface_client.py  openai_client.py  wpcodex_client.py
app/rag/domain/enum/: llm_operation.py  llm_provider.py
app/rag/domain/interface/: __init__.py  ingest_documentation_client.py  llm_client.py
app/rag/domain/usecase/: rag.py
app/user/domain/entity/: user.py
core/: config.py  logging_config.py
core/db/: session.py  transactional.py
core/dto/: error_response.py
core/exceptions/: base.py  handlers.py
core/fastapi/: exception_handlers.py
core/fastapi/dependencies/: __init__.py  permission.py
core/fastapi/middlewares/: sqlalchemy.py
core/helpers/: error_responses.py  html_cleaner.py  semantic_chunker.py
core/repository/: base.py
docker/: docker-compose.yml
docs/: embedding.md  vector-database.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.mjs
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/__tests__/: setup.ts
frontend/__tests__/components/: AnswerDisplay.test.tsx  ErrorDisplay.test.tsx  Header.test.tsx  HomePage.test.tsx  MarkdownRenderer.test.tsx  QuestionForm.test.tsx
frontend/__tests__/services/: httpClient.test.ts  ragClient.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AnswerDisplay.tsx  ErrorDisplay.tsx  Header.tsx  MarkdownRenderer.tsx  QuestionForm.tsx  RAGToggle.tsx
frontend/app/components/__tests__/: RAGToggle.test.tsx
frontend/app/config/: api.ts
frontend/app/services/: httpClient.ts  ragClient.ts
migrations/: env.py
migrations/versions/: 59628dea39ff_init.py
scripts/: check_chroma_db.py  ingest_wp_codex.py
tests/: conftest.py
tests/app/rag/adapter/input/api/v1/: test_rag.py
tests/app/rag/application/dto/: test_dto_validation.py
tests/app/rag/application/handler/: test_llm_only_handler.py  test_rag_handler.py
tests/app/rag/application/service/: test_llm_service.py  test_llm_service_factory.py  test_prompt_service.py  test_rag.py  test_rag_new.py
tests/app/rag/application/service/clients/: test_groq_client.py  test_huggingface_client.py  test_openai_client.py  test_wpcodex_client.py
tests/core/: test_config.py  test_logging_config.py
tests/core/dto/: test_error_response.py
tests/core/exceptions/: test_base.py  test_handlers.py
tests/core/helpers/: test_error_responses.py  test_html_cleaner.py  test_semantic_chunker.py  test_token.py
